# Regulatory-Scanner

./: .gitignore  GORILLA_GATE_PROJECT_BRIEF_v2.md  GORILLA_GATE_TECHNICAL_SPEC_v2.md  README.md  package-lock.json  tailwind.config.js
.github/workflows/: ci.yml
context/: CLAUDE.md  PLAN.md  SENTINEL_SCAN_PROJECT_BRIEF_v2.md  SENTINEL_SCAN_TECHNICAL_SPEC_v2.md  project_brief.md  technical_spec.md
context/memory-bank/: activeContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
frontend/: DEPLOYMENT.md  README.md  index.html  package-lock.json  package.json  wrangler.toml
frontend/public/: _headers  _redirects
frontend/src/components/icons/: Logo.tsx
frontend/src/components/layout/: Footer.tsx
frontend/src/components/sections/: CTA.tsx  CodeDemo.tsx  Features.tsx  Hero.tsx  Pricing.tsx  Solution.tsx
frontend/src/components/ui/: Button.tsx  CodeBlock.tsx  GradientOrb.tsx
frontend/src/styles/: globals.css
sentinel-scan/: Makefile  README.md  pyproject.toml
sentinel-scan-vscode/: .eslintrc.json  README.md  package.json
sentinel-scan-vscode/src/: diagnostics.ts  extension.ts  scanner.ts  statusBar.ts
sentinel-scan/scripts/: e2e_test.py
sentinel-scan/sentinel_scan/: __init__.py  allowlist.py  cli.py  config.py  models.py  runtime.py  scanner.py
sentinel-scan/sentinel_scan/detection/: __init__.py  base.py  context_analyzer.py  pii_detector.py  registry.py  vin_detector.py
sentinel-scan/sentinel_scan/formatters/: __init__.py  console.py  json_output.py
sentinel-scan/sentinel_scan/rules/: __init__.py  engine.py
sentinel-scan/sentinel_scan/templates/: automotive.yaml  default.yaml
sentinel-scan/tests/: __init__.py  conftest.py
sentinel-scan/tests/integration/: __init__.py  test_cli.py
sentinel-scan/tests/unit/: __init__.py  test_allowlist.py  test_config.py  test_context_analyzer.py  test_models.py  test_pii_detector.py  test_rule_engine.py  test_runtime.py  test_scanner.py  test_vin_detector.py
src/: App.tsx
src/components/icons/: Logo.tsx
src/components/layout/: Footer.tsx  Navbar.tsx
src/components/sections/: CodeDemo.tsx  Compliance.tsx  Problem.tsx  Solution.tsx
src/components/ui/: Card.tsx
